[gd_scene load_steps=18 format=3 uid="uid://bnr3j8crxh2mj"]

[ext_resource type="Script" uid="uid://c3gw00huxmkvv" path="res://scenes/gameplay/stages/tankmanBattlefield.gd" id="1_hx0hu"]
[ext_resource type="Texture2D" uid="uid://bir1mgfolyi7f" path="res://assets/images/gameplay/stages/tank/tankSky.png" id="2_gdow6"]
[ext_resource type="Texture2D" uid="uid://bu6g73vpywar" path="res://assets/images/gameplay/stages/tank/tankClouds.png" id="3_e8qdn"]
[ext_resource type="Texture2D" uid="uid://rl2fei4d3qhu" path="res://assets/images/gameplay/stages/tank/tankMountains.png" id="3_hvagv"]
[ext_resource type="Texture2D" uid="uid://yqt4keefhn8e" path="res://assets/images/gameplay/stages/tank/tankBuildings.png" id="5_o7ex2"]
[ext_resource type="Texture2D" uid="uid://jie6ar1487wt" path="res://assets/images/gameplay/stages/tank/tankRuins.png" id="6_8tmk2"]
[ext_resource type="SpriteFrames" path="res://assets/images/gameplay/stages/tank/smokeLeft.res" id="7_7j4re"]
[ext_resource type="SpriteFrames" path="res://assets/images/gameplay/stages/tank/smokeRight.res" id="8_l8yld"]
[ext_resource type="SpriteFrames" uid="uid://xje8h5ihbsr5" path="res://assets/images/gameplay/stages/tank/tankWatchtower.res" id="9_ou32a"]
[ext_resource type="SpriteFrames" path="res://assets/images/gameplay/stages/tank/tankRolling.res" id="10_2w2me"]
[ext_resource type="Texture2D" uid="uid://bvfcvftj0ncfp" path="res://assets/images/gameplay/stages/tank/tankGround.png" id="11_h5owd"]
[ext_resource type="SpriteFrames" uid="uid://tuu86an6ubj7" path="res://assets/images/gameplay/stages/tank/tank0.res" id="12_txs23"]
[ext_resource type="SpriteFrames" uid="uid://bhbwgtwg7ptdn" path="res://assets/images/gameplay/stages/tank/tank1.res" id="13_exjqr"]
[ext_resource type="SpriteFrames" uid="uid://bkisen7od1svx" path="res://assets/images/gameplay/stages/tank/tank2.res" id="14_4mmo3"]
[ext_resource type="SpriteFrames" uid="uid://lfasxabgypqg" path="res://assets/images/gameplay/stages/tank/tank4.res" id="15_busal"]
[ext_resource type="SpriteFrames" uid="uid://d2yro4kigg2kx" path="res://assets/images/gameplay/stages/tank/tank5.res" id="15_y7kjy"]
[ext_resource type="SpriteFrames" uid="uid://iqasyhbdpcv4" path="res://assets/images/gameplay/stages/tank/tank3.res" id="16_rwd11"]

[node name="tank" type="Node2D"]
script = ExtResource("1_hx0hu")
default_cam_zoom = 0.9
player_cam_offset = Vector2(-220, -100)
opponent_cam_offset = Vector2(250, -100)

[node name="0-0" type="Parallax2D" parent="."]
scroll_scale = Vector2(0, 0)

[node name="TankSky" type="Sprite2D" parent="0-0"]
z_index = 10
position = Vector2(-400, -400)
texture = ExtResource("2_gdow6")
centered = false

[node name="solid" type="ColorRect" parent="0-0"]
offset_left = -500.0
offset_top = -1000.0
offset_right = 1900.0
offset_bottom = 1000.0
color = Color(0.890196, 0.635294, 0.427451, 1)

[node name="0-2" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.2, 0.2)

[node name="TankMountains" type="Sprite2D" parent="0-2"]
z_index = 11
position = Vector2(-280, -20)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_hvagv")
centered = false

[node name="0-3" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.3, 0.3)

[node name="TankBuildings" type="Sprite2D" parent="0-3"]
z_index = 13
position = Vector2(-180, 0)
scale = Vector2(1.1, 1.1)
texture = ExtResource("5_o7ex2")
centered = false

[node name="0-35" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.35, 0.35)

[node name="TankRuins" type="Sprite2D" parent="0-35"]
z_index = 13
position = Vector2(-180, 0)
scale = Vector2(1.1, 1.1)
texture = ExtResource("6_8tmk2")
centered = false

[node name="0-4 loop" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.4, 0.4)
repeat_size = Vector2(2075, 0)
autoscroll = Vector2(-35, 0)
repeat_times = 2

[node name="TankClouds" type="Sprite2D" parent="0-4 loop"]
z_index = 11
texture = ExtResource("3_e8qdn")
centered = false

[node name="0-4" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.4, 0.4)

[node name="smoke_left" type="AnimatedSprite2D" parent="0-4"]
z_index = 14
position = Vector2(-200, 0)
sprite_frames = ExtResource("7_7j4re")
animation = &"SmokeBlurLeft instance 1"
frame_progress = 0.414051
centered = false

[node name="smoke_right" type="AnimatedSprite2D" parent="0-4"]
z_index = 15
position = Vector2(1100, -100)
sprite_frames = ExtResource("8_l8yld")
animation = &"SmokeRight instance 1"
frame_progress = 0.564037
centered = false

[node name="0-5" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.5, 0.5)

[node name="tank_watch_tower" type="AnimatedSprite2D" parent="0-5"]
z_index = 21
position = Vector2(100, 50)
sprite_frames = ExtResource("9_ou32a")
animation = &"bop"
centered = false

[node name="tank_ground" type="AnimatedSprite2D" parent="0-5"]
z_index = 22
sprite_frames = ExtResource("10_2w2me")
animation = &"BG tank w lighting instance 1"
autoplay = "BG tank w lighting instance 1"
centered = false

[node name="1-15" type="Parallax2D" parent="."]
scroll_scale = Vector2(1.15, 1.15)

[node name="TankGround" type="Sprite2D" parent="1-15"]
z_index = 40
position = Vector2(-420, -150)
scale = Vector2(1.15, 1.15)
texture = ExtResource("11_h5owd")
centered = false

[node name="1-7 1-5" type="Parallax2D" parent="."]
scroll_scale = Vector2(1.7, 1.5)

[node name="tank0" type="AnimatedSprite2D" parent="1-7 1-5"]
z_index = 1000
position = Vector2(-500, 650)
sprite_frames = ExtResource("12_txs23")
animation = &"bop"
centered = false

[node name="1-5" type="Parallax2D" parent="."]
scroll_scale = Vector2(1.5, 1.5)

[node name="tank2" type="AnimatedSprite2D" parent="1-5"]
z_index = 1002
position = Vector2(360, 980)
sprite_frames = ExtResource("14_4mmo3")
animation = &"bop"
centered = false

[node name="tank4" type="AnimatedSprite2D" parent="1-5"]
z_index = 1004
position = Vector2(1200, 900)
sprite_frames = ExtResource("15_busal")
animation = &"bop"
centered = false

[node name="tank5" type="AnimatedSprite2D" parent="1-5"]
z_index = 1003
position = Vector2(1550, 700)
sprite_frames = ExtResource("15_y7kjy")
animation = &"bop"
centered = false

[node name="3-5 2-5" type="Parallax2D" parent="."]
scroll_scale = Vector2(3.5, 2.5)

[node name="tank3" type="AnimatedSprite2D" parent="3-5 2-5"]
z_index = 1016
position = Vector2(1050, 1240)
sprite_frames = ExtResource("16_rwd11")
animation = &"bop"
centered = false

[node name="2-0 0-2" type="Parallax2D" parent="."]
scroll_scale = Vector2(2, 0.2)

[node name="bopper2" type="AnimatedSprite2D" parent="2-0 0-2"]
z_index = 1100
position = Vector2(-300, 750)
sprite_frames = ExtResource("13_exjqr")
animation = &"bop"
centered = false

[node name="Character Positions" type="Node2D" parent="."]

[node name="Opponent" type="Node2D" parent="Character Positions"]
z_index = 100
position = Vector2(230.5, 885)

[node name="Spectator" type="Node2D" parent="Character Positions"]
z_index = 100
position = Vector2(660.5, 715)

[node name="Player" type="Node2D" parent="Character Positions"]
z_index = 100
position = Vector2(1090.5, 885)
